<?xml version="1.0"?>
<package>
  <name>rpi_gpio</name>
  <version>0.0.0</version>
  <description>The rpi_gpio package</description>

  <maintainer email="chrisspen@gmail.com">Chris Spencer</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rpi_gpio</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>